crates/apollo-compiler/test_data/diagnostics/0099_input_object_extensions.txt
Error: the value `field` is defined multiple times
   ╭─[0099_input_object_extensions.graphql:2:3]
   │
 2 │   field: String
   │   ──────┬──────  
   │         ╰──────── previous definition of `field` here
   │ 
 5 │   field: String
   │   ──────┬──────  
   │         ╰──────── `field` redefined here
   │ 
   │ Help: `field` field must only be defined once in this input object definition.
───╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0099_input_object_extensions.graphql:12:30]
    │
  9 │ input UniqueDirective @nonRepeatable {
    │                       ───────┬──────  
    │                              ╰──────── directive nonRepeatable first called here
    │ 
 12 │ extend input UniqueDirective @nonRepeatable
    │                              ───────┬──────  
    │                                     ╰──────── directive nonRepeatable called again here
────╯

